# smb-vision

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_mim.py  run_mim.sh  sync_s3.sh
acc_configs/: multi_gpu_config.yaml
dataloader/: build_train_file.py  mim.py
models/videomae/: configuration_videomae.py
scripts/: build_train_file.py  build_valid_dataset.py  download_from_s3.py  download_nifti.py  run_data_filtering.py  sync_s3.sh  tumor_mask.py  upload_model.py
scripts/inference/: inspect.py  run_inspect.py  run_inspect.sh  upload2s3.py  utils.py
scripts/inference/inspect/: run_inspect.py  run_inspect.sh
scripts/inference/llava-med/: build_json.py
scripts/misc/: build_tumor_mask.py  create_dummy_data.py  create_mdanderson_data.py  download_from_s3.py  misc.py
scripts/preprocess/: create_dummy_data.py  create_mdacc_data.py
scripts/training/: run_cls.sh  run_mim.sh  run_vjepa.sh
src/: __init__.py  inference.py  run_classification.py  run_eval.py  run_inference.py  run_mim.py  run_vjepa.py
src/dataloader/: __init__.py  build_train_file.py  load.py  mim.py  transforms.py
src/encoders/: base_encoder.py  merlin.py  run_merlin.py  run_siglip.py
src/models/dinov2/: __init__.py  modeling_dinov2.py
src/models/videomae/: __init__.py  configuration_videomae.py  feature_extraction_videomae.py  image_processing_videomae.py  modeling_qwen2_5_vl.py  modeling_videomae.py
src/models/vjepa/: modeling_vjepa.py
src/train/: train_utils.py  train_vjepa.py  trainer.py
tests/: test_dataloader.py  test_vjepa_model.py  test_vjepa_transforms.py
