[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smb-vision"
version = "1.0.0"
description = "SMB Vision: Vision Transformer for Biomedicine"
readme = "README.md"
authors = [{ name = "Zekai Chen", email = "zach@standardmodel.bio" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers>=4.46.1",
    "peft",
    "accelerate",
    "datasets",
    "nibabel",
    "monai",
    "loguru",
    "awswrangler",
    "ninja",
]

[project.optional-dependencies]
dev = ["black>=22.3.0", "isort>=5.10.1", "flake8>=3.9.0", "pytest>=6.0.0"]

[tool.ruff]
target-version = "py39"
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/transformers/file_utils.py" = ["F401"]
"src/transformers/utils/dummy_*.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
